# gpu-memory-layout-playground

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  readme.md
cmake/: experiments_manifest.cmake  tests.cmake
docs/: 00_development_plan.md  01_gpu_execution_model.md  02_memory_layouts.md  03_cache_behavior.md  04_coalesced_vs_strided.md  05_shared_memory_tiling.md  06_bandwidth_saturation.md  README.md  advanced_investigation_plans_index.md  advanced_investigations_roadmap.md  clang_tooling.md  core_experiment_plans_index.md  development_principles_and_plan.md  experiment_registry_generation.md  layout_rules.md
docs/advanced_plans/: 01_radix_sort_gpu.md  02_bvh_node_layout.md  03_frustum_vs_clustered_culling.md  04_tiled_light_assignment.md  05_persistent_threads_work_queues.md  06_subgroup_operations.md  07_async_compute_overlap.md  08_occupancy_modeling.md  09_ray_friendly_memory_layouts.md  10_frame_to_frame_coherence.md  11_gpu_driven_pipeline_blocks.md  12_cross_gpu_reproducibility.md
docs/experiment_plans/: 01_dispatch_basics.md  06_aos_vs_soa.md  07_aosoa_blocked_layout.md  09_vec3_vec4_padding_costs.md  10_scalar_type_width_sweep.md  11_coalesced_vs_strided.md  12_gather_access_pattern.md  13_scatter_access_pattern.md  15_bandwidth_saturation_sweep.md  17_tile_size_sweep.md  21_parallel_reduction.md  24_stream_compaction.md
docs/notes/: OpenQuestions.md
experiments/01_dispatch_basics/: README.md  architecture.md  development_plan.md  experiment_plan.md  implementation_plan.md  results.md
experiments/01_dispatch_basics/scripts/: README.md  analyze_dispatch_basics.py  collect_run.py  plot_results.py
experiments/02_local_size_sweep/: README.md  experiment_plan.md
experiments/03_memory_copy_baseline/: README.md  experiment_plan.md
experiments/04_sequential_indexing/: README.md  experiment_plan.md
experiments/05_global_id_mapping_variants/: README.md  architecture.md  development_plan.md  experiment_plan.md  implementation_plan.md  results.md
experiments/05_global_id_mapping_variants/scripts/: README.md  analyze_global_id_mapping_variants.py  collect_run.py  plot_results.py
experiments/06_aos_vs_soa/: README.md
experiments/07_aosoa_blocked_layout/: README.md
experiments/08_std430_std140_packed/: README.md  architecture.md  development_plan.md  experiment_plan.md  implementation_plan.md  results.md
experiments/08_std430_std140_packed/scripts/: README.md  analyze_std430_std140_packed.py  collect_run.py  plot_results.py
experiments/09_vec3_vec4_padding_costs/: README.md
experiments/10_scalar_type_width_sweep/: README.md  architecture.md  development_plan.md  experiment_plan.md  implementation_plan.md  results.md
experiments/10_scalar_type_width_sweep/scripts/: README.md  analyze_scalar_type_width_sweep.py  collect_run.py
experiments/11_coalesced_vs_strided/: README.md  architecture.md  development_plan.md  implementation_plan.md  results.md
experiments/11_coalesced_vs_strided/scripts/: analyze_coalesced_vs_strided.py  collect_run.py  plot_results.py
experiments/12_gather_access_pattern/: README.md
experiments/13_scatter_access_pattern/: README.md
experiments/14_read_reuse_cache_locality/: README.md  experiment_plan.md
experiments/15_bandwidth_saturation_sweep/: README.md
experiments/16_shared_memory_tiling/: README.md  experiment_plan.md
experiments/17_tile_size_sweep/: README.md
experiments/18_register_pressure_proxy/: README.md  experiment_plan.md
experiments/19_branch_divergence/: README.md  experiment_plan.md
experiments/20_barrier_synchronization_cost/: README.md  experiment_plan.md
experiments/21_parallel_reduction/: README.md
experiments/22_prefix_sum_scan/: README.md  experiment_plan.md
experiments/23_histogram_atomic_contention/: README.md  experiment_plan.md
experiments/24_stream_compaction/: README.md
experiments/25_spatial_binning_clustered_culling_capstone/: README.md  experiment_plan.md
include/: app_options.hpp  benchmark_runner.hpp  buffer_utils.hpp  json_exporter.hpp  vulkan_compute_utils.hpp  vulkan_context.hpp
include/experiments/: aos_soa_experiment.hpp  coalesced_vs_strided_experiment.hpp  dispatch_basics_experiment.hpp  global_id_mapping_variants_experiment.hpp  scalar_type_width_sweep_experiment.hpp  std430_std140_packed_experiment.hpp
include/utils/: app_options.hpp  buffer_utils.hpp  experiment_metrics.hpp  gpu_timestamp_timer.hpp  json_exporter.hpp  layout_assert.hpp  scalar_type_width_utils.hpp  vulkan_compute_utils.hpp
scripts/: generate_experiment_artifacts.py  plot_results.py  run_clang_tools.py  run_experiment_data_collection.py
shaders/: 01_dispatch_basics_write.comp  01_noop.comp  05_global_id_mapping_variants.comp  06_aos.comp  06_soa.comp
shaders/08_std430_std140_packed/: 08_packed.comp  08_std140.comp  08_std430.comp
shaders/10_scalar_type_width_sweep/: 10_fp16_storage.comp  10_fp32.comp  10_u16.comp  10_u32.comp  10_u8.comp
shaders/11_coalesced_vs_strided/: 11_coalesced_vs_strided.comp
src/: app_options.cpp  benchmark_runner.cpp  buffer_utils.cpp  json_exporter.cpp  main.cpp  vulkan_compute_utils.cpp  vulkan_context.cpp
src/experiments/: aos_soa_experiment.cpp  aosoa_blocked_layout_experiment.cpp  coalesced_vs_strided_experiment.cpp  dispatch_basics_experiment.cpp  global_id_mapping_variants_experiment.cpp  local_size_sweep_experiment.cpp  scalar_type_width_sweep_experiment.cpp  sequential_indexing_experiment.cpp  std430_std140_packed_experiment.cpp  vec3_vec4_padding_costs_experiment.cpp
src/experiments/adapters/: coalesced_vs_strided_adapter.cpp  global_id_mapping_variants_adapter.cpp  scalar_type_width_sweep_adapter.cpp  std430_std140_packed_adapter.cpp
src/utils/: app_options.cpp  buffer_utils.cpp  gpu_timestamp_timer.cpp  json_exporter.cpp  scalar_type_width_utils.cpp  vulkan_compute_utils.cpp
tests/unit/: scalar_type_width_utils_tests.cpp
